fix header overflow

--- a/AdvisingScheduler/web/css/default.css
+++ b/AdvisingScheduler/web/css/default.css
@@ -38,7 +38,6 @@ body {
 
 header{
     width: 1280px;
-    height: 65px;
     margin: 0 auto;
     display:inline-block;
     background-repeat: no-repeat;
